make it bette on handling null data
