# app/models/book_model.go
@@ -14,30 +14,23 @@ type BookDelete struct {
 }
 
 type BookCreate struct {
-	UserID    uuid.UUID `db:"user_id" json:"user_id" validate:"required,uuid"`
-	Title     string    `db:"title" json:"title" validate:"required,lte=255"`
-	Author    string    `db:"author" json:"author" validate:"required,lte=255"`
-	BookAttrs BookAttrs `db:"book_attrs" json:"book_attrs" validate:"required"`
+	Title      string    `db:"title" json:"title" validate:"required,lte=255"`
+	Author     string    `db:"author" json:"author" validate:"required,lte=255"`
+	BookStatus int       `db:"book_status" json:"book_status" validate:"oneof=0 1"`
+	BookAttrs  BookAttrs `db:"book_attrs" json:"book_attrs" validate:"required"`
 }
 
 type BookUpdate struct {
-	ID         uuid.UUID `json:"id" validate:"required,uuid"`
-	UserID     uuid.UUID `db:"user_id" json:"user_id" validate:"required,uuid"`
-	Title      string    `db:"title" json:"title" validate:"required,lte=255"`
-	Author     string    `db:"author" json:"author" validate:"required,lte=255"`
-	BookStatus int       `db:"book_status" json:"book_status" validate:"required,len=1"`
-	BookAttrs  BookAttrs `db:"book_attrs" json:"book_attrs" validate:"required"`
+	ID uuid.UUID `json:"id" validate:"required,uuid"`
+	BookCreate
 }
 
 type Book struct {
-	ID         uuid.UUID `db:"id" json:"id" validate:"required,uuid"`
-	CreatedAt  time.Time `db:"created_at" json:"created_at"`
-	UpdatedAt  time.Time `db:"updated_at" json:"updated_at"`
-	UserID     uuid.UUID `db:"user_id" json:"user_id" validate:"required,uuid"`
-	Title      string    `db:"title" json:"title" validate:"required,lte=255"`
-	Author     string    `db:"author" json:"author" validate:"required,lte=255"`
-	BookStatus int       `db:"book_status" json:"book_status" validate:"required,len=1"`
-	BookAttrs  BookAttrs `db:"book_attrs" json:"book_attrs" validate:"required"`
+	ID        uuid.UUID `db:"id" json:"id" validate:"required,uuid"`
+	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	UpdatedAt time.Time `db:"updated_at" json:"updated_at"`
+	UserID    uuid.UUID `db:"user_id" json:"user_id" validate:"required,uuid"`
+	BookCreate
 }
 
 type BookAttrs struct {
