# docs/swagger.json
@@ -47,7 +47,10 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created"
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Book"
+                        }
                     }
                 }
             },
@@ -117,8 +120,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -310,7 +316,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.SignUp"
                         }
                     }
                 }
@@ -323,7 +329,6 @@
             "required": [
                 "author",
                 "book_attrs",
-                "book_status",
                 "id",
                 "title",
                 "user_id"
@@ -337,7 +342,11 @@
                     "$ref": "#/definitions/models.BookAttrs"
                 },
                 "book_status": {
-                    "type": "integer"
+                    "type": "integer",
+                    "enum": [
+                        0,
+                        1
+                    ]
                 },
                 "created_at": {
                     "type": "string"
@@ -378,8 +387,7 @@
             "required": [
                 "author",
                 "book_attrs",
-                "title",
-                "user_id"
+                "title"
             ],
             "properties": {
                 "author": {
@@ -389,12 +397,16 @@
                 "book_attrs": {
                     "$ref": "#/definitions/models.BookAttrs"
                 },
+                "book_status": {
+                    "type": "integer",
+                    "enum": [
+                        0,
+                        1
+                    ]
+                },
                 "title": {
                     "type": "string",
                     "maxLength": 255
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         },
@@ -414,10 +426,8 @@
             "required": [
                 "author",
                 "book_attrs",
-                "book_status",
                 "id",
-                "title",
-                "user_id"
+                "title"
             ],
             "properties": {
                 "author": {
@@ -428,7 +438,11 @@
                     "$ref": "#/definitions/models.BookAttrs"
                 },
                 "book_status": {
-                    "type": "integer"
+                    "type": "integer",
+                    "enum": [
+                        0,
+                        1
+                    ]
                 },
                 "id": {
                     "type": "string"
@@ -436,9 +450,6 @@
                 "title": {
                     "type": "string",
                     "maxLength": 255
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         },
@@ -499,42 +510,6 @@
                 "refresh": {
                     "type": "string",
                     "example": "refresh-token"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "required": [
-                "email",
-                "id",
-                "password_hash",
-                "user_role",
-                "user_status"
-            ],
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string",
-                    "maxLength": 255
-                },
-                "id": {
-                    "type": "string"
-                },
-                "password_hash": {
-                    "type": "string",
-                    "maxLength": 255
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_role": {
-                    "type": "string",
-                    "maxLength": 25
-                },
-                "user_status": {
-                    "type": "integer"
                 }
             }
         }
